[tool.poetry]
name = "echo-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "echo_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
ujson = "^5.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-multipart = "^0.0.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.16"}
aiosqlite = "^0.19.0"
types-python-jose = "^3.3.4.7"
types-passlib = "^1.7.7.12"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
ruff = "^0.0.272"


[tool.mypy]
strict = true
implicit_reexport = true

[tool.ruff]
select = ["E", "F", "B", "I", "N", "W"]
ignore = ["E501"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
